--- a/SubmittedAssignments/Vrushali-Gavali-130/preview.html
+++ b/SubmittedAssignments/Vrushali-Gavali-130/preview.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="./CSS/style.css" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css" />
   <title>Visiting Card</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css"
+    integrity="sha384-NvKbDTEnL+A8F/AA5Tc5kmMLSJHUO868P+lDtTpJIeQdGYaUIuLr4lVGOEA1OcMy" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/solid.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
   <!-- Bootstrap Font Icon CSS -->
@@ -18,7 +17,7 @@
 </head>
 
 <body>
-  <center style="padding-top: 40px">
+  <center style="padding-top: 10.5mm">
     <div class="card-wrapper card-front">
       <!-- Card Background -->
       <div class="card1-background">
@@ -32,26 +31,26 @@
       <div class="card1-content">
         <div class="party-name">
           <b>brand name</b>
-          <span style="position:relative;color: #CC9A93;font-size:2mm;left: -20mm;top: 2.5mm;">YOUR SLOGAN HERE</span>
+          
         </div>
-        <div class="party-job-title"></div>
+        <div class="party-job-title">YOUR SLOGAN HERE</div>
         <div class="company">www.yourwebsite.com</div>
 
         <!-- Additional Contact Information -->
         <div class="qr-code">
-          <img src="./IMG/visiting card logo.jpg" class="qr-img">
+          <img src="./img/visiting card logo.jpg" class="qr-img">
         </div>
 
         <div class="party-phone">
           <i class="bi bi-telephone"></i>
-          <span class="party-phone-lable"></span>
-          <span class="party-phone-number"></span>
+          <span class="party-phone-lable">Phone:</span>
+          <span class="party-phone-number">+91 7038249592</span>
         </div>
 
         <div class="party-email">
           <i class="bi bi-envelope"></i>
-          <span class="party-email-lable"></span>
-          <span class="party-web"></span>
+          <span class="party-email-lable">Email:</span>
+          <span class="party-email-address">ketuvmali311@gmail.com</span>
         </div>
       </div>
     </div>
@@ -69,37 +68,39 @@
       </div>
       <div class="card2-content">
         <div class="org-logo">
-          <img class="org-logo-img" height="25px" src="./IMG/visiting card logo.jpg" />
+          <img class="org-logo-img" height="25px" src="./img/visiting card logo.jpg" />
         </div>
         <div class="org-name">
-          <span style="position: relative;top: -1mm;left: -7mm;font-size: 4mm;color:black;text-transform: uppercase;"><b>Brand name</b></span>
-          <span style="position: relative;color: #ffffff;top: 2mm;left: -30mm;font-size: 2mm;">YOUR SLOGAN HERE</span>
-          <span style="color:#531614;font-size: 5mm;position: relative;top: -16mm;left: -103mm;text-transform:capitalize"><b>Mark</b></span>
-          <span style="color:#0F0506;font-size: 5mm;position: relative;top: -16mm;left: -100mm;text-transform:capitalize"><b>Smith</b></span>
-          <span style="position: relative;font-size: 2mm;color: #333;top: -18mm;left: -85mm;">CEO&FOUNDER</span>
+          <span style="position:relative;color:black;font-size: 2.5mm;left: 1mm;top: -2.5mm;"><b>Brand Name</b></span>
+          <span style="position: relative;color: #ffffff;top: 0mm;left: -18mm;font-size: 2mm;">YOUR SLOGAN HERE</span>
+          <span
+            style="color:#531614;font-size: 5mm;position: relative;top: -16mm;left: -89mm;text-transform:capitalize"><b>Mark</b></span>
+          <span
+            style="color:#0F0506;font-size: 5mm;position: relative;top: -16mm;left: -87mm;text-transform:capitalize"><b>Smith</b></span>
+          <span style="position: relative;font-size: 2mm;color: #333;top: -13mm;left: -117mm;">CEO&FOUNDER</span>
 
         </div>
         <address class="org-address">
           <span class="org-address-line-1"></span>
           <span class="org-address-line-2"></span>
-          <span class="org-address-location"></span><span class="org-address-area"></span><span
+          <span class="org-address-location">Pune-411017</span><span class="org-address-area"></span><span
             class="org-address-city"></span><span class="org-address-area"></span><span
             class="org-address-pincode"></span>
         </address>
         <div class="org-email">
-          <i class="fa fa-map-marker"></i>
-          <span class="org-address-location"><b>address here<br></b></span>
-          <span class="org-address-area"><b>address here</b></span>
+          <i class="bi bi-telephone-fill"></i>
+          <span class="org-email-lable">Email:</span>
+          <span class="org-email-address">info@mmeac.com</span>
         </div>
         <div class="org-phone">
-          <i class="fa fa-phone"></i>
-          <span class="org-phone-lable"><b>+000 123 456 789</b><br></span>
-          <span class="org-phone-number"><b>+000 123 456 789</b></span>
+          <i class="bi bi-phone-fill"></i>
+          <span class="org-phone-lable">Phone:</span>
+          <span class="org-phone-number">+91 8999417889</span>
         </div>
         <div class="org-website">
-          <i class="fa fa-globe"></i>
-          <span class="org-website-lable"><b>web address here</b><br></span>
-          <span class="org-website-address"><b>web address here</b></span>
+          <i class="bi bi-browser-chrome"></i>
+          <span class="org-website-lable">Website:</span>
+          <span class="org-website-address">www.abc.com</span>
         </div>
       </div>
   </center>
